--- a/views/quiz/history/index.ejs
+++ b/views/quiz/history/index.ejs
@@ -59,6 +59,8 @@
                                             <% } %>
                                             <strong style="color: red;">Salah</strong>
                                         <% } %>
+                                        <br><strong>Keterangan :</strong><br>
+                                        <span><%= (item.keterangan) ? item.keterangan : '-' %></span>
                                     </li>
                                 <% }) %>
                             </ul>
